--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,3 +5,19 @@ main {
     margin-top: 50px;
     display: block;
 }
+#background {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background-size: cover;
+}
+.container h1 {
+    color: white;
+}
