--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
         </div>
         <ul class="nav navbar-nav">
             <li><a routerLink="/add" routerLinkActive="active">Add Student</a></li>
-            <li><a href="#">View Record</a></li>
+            <li><a routerLink="/read" routerLinkActive="active">View Record</a></li>
             <li><a href="#">Update Record</a></li>
             <li><a href="#">Delete Record</a></li>
         </ul>
