centered button and forever start backend server

--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -45,8 +45,8 @@
     </form>
 </div>
 <div class="container" [hidden]="!submitted">
-    <div class="col-md-4 text-center">
+    <div class="col-sm-12 text-center">
         <h2>Student Record Submitted!</h2>
-        <button name="singlebutton" (click)="submitted=false; student=[]" class="btn btn-primary">Add Another Student</button>
+        <button id="singlebutton" name="singlebutton" (click)="submitted=false; student=[]" class="btn btn-primary">Add Another Student</button>
     </div>
 </div>
