Update and delete implement

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,9 @@
         </div>
         <ul class="nav navbar-nav">
             <li><a routerLink="/add" routerLinkActive="active">Add Student</a></li>
-            <li><a routerLink="/read" routerLinkActive="active">View Record</a></li>
-            <li><a href="#">Update Record</a></li>
-            <li><a href="#">Delete Record</a></li>
+            <li><a routerLink="/read" routerLinkActive="active">View Students</a></li>
+            <li><a routerLink="/update" routerLinkActive="active">Update Record</a></li>
+            <li><a routerLink="/delete" routerLinkActive="active">Delete Record</a></li>
         </ul>
     </div>
 </nav>
